# modern_dcf

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
docs/: index.md  installation.md  usage.md
src/modern_dcf/: modern_dcf.py  utils.py
tests/: __init__.py  test_modern_dcf.py  test_modern_dcf_pipe.py  test_utils.py
